[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OpenTTDLab"
version = "0.0.0.dev0"
authors = [
  { name="Michal Charemza", email="michal@charemza.name" },
  # Author of https://github.com/TrueBrain/OpenTTD-savegame-reader, which OpenTTDLab is a fork of
  { name="Patric Stout", email="truebrain@openttd.org" },
]
description = "Python framework for running reproducible experiments using OpenTTD"
readme = "README.md"
requires-python = ">=3.6.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/michalc/OpenTTDLab"

[project.optional-dependencies]
dev = [
  "coverage>=6.2",
  "pytest>=7.0.1",
  "pytest-cov>=3.0.0",
]
ci = [
  "coverage>=6.2",
  "pytest>=7.0.1",
  "pytest-cov>=3.0.0",
]

[tool.hatch.build]
include = [
  "openttdlab.py"
]
